Rm many deprecated usages, including old Mockito in tests (#721)
* Rm many deprecated usages, including old Mockito in tests
- Lots of test cleanup and  improved coverage for LoaderProblem

* Made several fields final

* Update lower coverage limit

* Whitespace change to force travis to run

* Merge CICD changes on main to branch (#725)

* Create maven-ci.yaml

* Update maven-ci.yaml

* Update codacy.yml

* Add Codacy coverage report

* Syntax change

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Add GitHub Actions and Codacy (#723)

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Update maven-ci.yaml

* Create .codacy.yml

* Update readme

Switch to GitHub Actions and Codacy

* rm extra comments

* Update codacy.yml

* Update maven-ci.yaml

* small change to force actions to run

Co-authored-by: Eric Everman <eeverman@gmail.com>